# NovaChat

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  NovaChat开发任务书.md  README.md  build_build.bat  build_configure.bat  build_test.bat  run_client.bat  run_client_alice.bat  run_client_bob.bat  run_server.bat  vcpkg.json
client/: CMakeLists.txt
client/resources/: style.qss
client/src/: main.cpp
client/src/config/: AppConfig.cpp  AppConfig.h
client/src/core/: Contact.h  Conversation.h  LocalAccount.h  Message.h  User.h
client/src/logger/: Logger.cpp  Logger.h
client/src/network/: TcpClient.cpp  TcpClient.h
client/src/service/: AuthService.cpp  AuthService.h  ChatService.cpp  ChatService.h  ContactService.cpp  ContactService.h
client/src/storage/: ContactRepository.cpp  ContactRepository.h  ConversationRepository.cpp  ConversationRepository.h  DatabaseManager.cpp  DatabaseManager.h  MessageRepository.cpp  MessageRepository.h  UserRepository.cpp  UserRepository.h
client/src/ui/: AddFriendDialog.cpp  AddFriendDialog.h  AppStyle.h  ChatView.cpp  ChatView.h  ContactPanel.cpp  ContactPanel.h  ConversationList.cpp  ConversationList.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  MessageBubbleDelegate.cpp  MessageBubbleDelegate.h  RegisterDialog.cpp  RegisterDialog.h  SettingsDialog.cpp  SettingsDialog.h
client/tests/: CMakeLists.txt
client/tests/config/: test_appconfig.cpp
client/tests/logger/: test_logger.cpp
client/tests/network/: test_codec.cpp
client/tests/storage/: test_contact_repository.cpp  test_conversation_repository.cpp  test_database.cpp  test_message_repository.cpp  test_user_repository.cpp
docs/superpowers/plans/: 2026-07-03-phase1-project-init.md  2026-07-03-phase2-infrastructure.md  2026-07-03-phase3-login.md  2026-07-03-phase4-contacts.md  2026-07-03-phase5-chat.md  2026-07-03-phase6-polish.md  integration-checklist.md
docs/superpowers/specs/: 2026-07-03-novachat-v1-design.md
proto/: CMakeLists.txt  MessageType.h  ProtocolCodec.cpp  ProtocolCodec.h  auth.proto  chat.proto  common.proto  contact.proto
server/: CMakeLists.txt
server/src/: main.cpp
server/src/handler/: AuthHandler.cpp  AuthHandler.h  ChatHandler.cpp  ChatHandler.h  ContactHandler.cpp  ContactHandler.h
server/src/network/: ClientSession.cpp  ClientSession.h  TcpServer.cpp  TcpServer.h
server/src/storage/: ServerStorage.cpp  ServerStorage.h
